--- a/main/index.html
+++ b/main/index.html
@@ -1,1 +1,245 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>Skillify</title>
+</head>
 
+<div class="container">
+    <header class="header"> 
+        <div class="row align-items-center">
+                <div class="col">
+                    <h1 class="" id="title">Skillify</h1>
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                </div>
+                <div class="col">
+                <span class="dot"><img class="img-responsive" src="menu.png" id="menu" alt="menu"></span>
+                </div>
+        </div>
+    </header>
+</div>
+    
+<body>
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="col">
+                <img class="img-responsive" id="logo_intro" src="Logo_final.png" alt="Skillify">
+            </div>
+        </div>
+    </div>
+</div>   
+<br>
+<!--
+    <div class="row">
+        <br>
+        <div class="col">
+        </div>
+        <div class="col">
+            <h1 class="" id="title_2">Boost your <wbr> Skills with <wbr> Skillify</h1>
+        </div>
+    </div>
+-->
+<h1 class="title">
+    <span class="title-content">Boost your</span>
+    <span class="title-content title-second">Skills with</span>
+    <span class="title-content title-third">Skillify</span>
+</h1>
+
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+    </div>
+    <div class="col">
+        <h4 class="btn registNow">Register</h4>
+    </div>
+    <div class="col">
+        <h4 class="btn logIn">Log In</h4>
+    </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<h1 class="" id="who_title">Who</h1>
+
+<p>random text</p>
+
+<br>
+<br>
+<!--Who cards -->
+<article class="card">
+    <div class="card_content">
+        <h5 class="card_title">Lucas Silva, Júnior Developer</h5>
+        <p class="card_description">An perfectly synchronized random text</p>
+    </div>
+</article>
+
+<br>
+<br>
+<article class="card">
+    <div class="card_content">
+        <h5 class="card_title">Nuno Mendonça</h5>
+        <h3 class="card_subtitle">Junior Developer</h3>
+        <p class="card_description">An perfectly synchronized random text</p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card">
+    <div class="card_content">
+        <h5 class="card_title">Tiago Ribeiro, Júnior Developer</h5>
+        <p class="card_description">An perfectly synchronized random text</p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<h4 class="" id="about_target">Find out More ABOUT Skillify</h4>
+
+<br><br>
+
+<h1 class="" id="about_title">About</h1>
+
+<br>
+
+<p>random text</p>
+
+<br>
+<br>
+
+<h4 id="important">What Makes Soft Skills Important</h4>
+
+<p>Random text</p>
+
+<br>
+<br>
+
+
+<h2 id="missing">The Missing Piece</h2>
+
+<!--Falta colocar a peça-->
+<br>
+<br>
+
+<h4 class="" id="methods_target">See our METHODS For Yourself</h4>
+
+<br>
+<br>
+
+<h1 class="" id="methods_title">Methods</h1>
+<br>
+<!--VIdeo promocional-->
+<p>video</p>
+
+<br>
+<br>
+<br>
+
+<h5 id="videos_title">Videos</h5>
+<p>text</p>
+
+<br>
+<br>
+
+<h5 id="practice_title">Practice</h5>
+<p>text</p>
+
+<br>
+
+<h4 id="learn">Learn More</h4>
+
+<br>
+<br>
+<br>
+
+
+
+<h1 class="" id="courses_title">Courses</h1>
+<br>
+
+<p>random text</p>
+
+<br>
+
+<h2>Communication</h2>
+<p>communication</p>
+
+<br>
+
+<h2>Leadership</h2>
+<p>leadership</p>
+
+<br>    
+
+<h2>Creativity</h2>
+<p>creativity</p>
+
+<br>
+
+<h2>Decision Making</h2>
+<p>decision making</p>
+
+<br>
+
+<h2>Time Management</h2>
+<p>time management</p>
+
+<br>
+
+<h2>Adaptability</h2>
+<p>adaptability</p>
+
+<br>
+
+<h2>Persuasion</h2>
+<p>persuasion</p>
+
+<br>
+
+<h2>Problem Solving</h2>
+<p>problem solving</p>
+
+<br>
+
+<h2>Collaboration</h2>
+<p>collaboration</p>
+
+<br>
+<br>
+
+<h4 class="" id="courses_target">Take me there</h4>
+
+<br><br>
+
+<p>button to go up</p>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <script src="index.js"></script>
+</body>
+</html>
