--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <title>Skillify</title>
 </head>
 
@@ -26,7 +26,7 @@
             <div class="col slide">
                 <span class="dot">
                     <a href="#" onclick="openSlideMenu()">
-                        <img class="img-responsive" src="./img/menu.png" id="menu" alt="menu">
+                        <img class="img-responsive" src="../imgs/main/menu.png" id="menu" alt="menu">
                     </a>
                 </span>
             </div>
@@ -66,7 +66,7 @@
     <div class="row">
         <div class="col">
             <div class="col">
-                <img class="img-responsive" id="logo_intro" src="./img/Logo_final.png" alt="Skillify">
+                <img class="img-responsive" id="logo_intro" src="../imgs/main/Logo_final.png" alt="Skillify">
             </div>
         </div>
     </div>
@@ -113,11 +113,11 @@
 <div class="row">
     <div class="col">
         <!--Acesso aos cursos-->
-        <span id="dot_cursos"><img class="img-responsive" src="./img/magistrate.png" id="perfil" alt="profile"></span>
+        <span id="dot_cursos"><img class="img-responsive" src="../imgs/main/magistrate.png" id="perfil" alt="profile"></span>
     </div>
     <div class="col">
     <!--Acesso ao Perfil-->
-    <span id="dot_perfil"><img class="img-responsive" src="./img/user.png" id="perfil" alt="profile"></span>
+    <span id="dot_perfil"><img class="img-responsive" src="../imgs/main/user.png" id="perfil" alt="profile"></span>
     </div>
 </div>
 
@@ -300,7 +300,7 @@
 
 <h4 class="" id="courses_target">Take me there</h4>
 
-<span id="dot_up"><img src="./img/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
+<span id="dot_up"><img src="../imgs/main/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
 
 </div>
 </div>
@@ -313,6 +313,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <script src="index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
