userprofile js + achivements

--- a/html/userprofile.html
+++ b/html/userprofile.html
@@ -16,6 +16,7 @@
         <img
           src="../imgs/userprofile_imgs/profile-pic.png"
           class="profile-pic"
+          id="profile-pic"
         />
         <h3>Lucas Silva</h3>
         <p>Junior Web developer</p>
@@ -30,5 +31,7 @@
         </div>
       </div>
     </div>
+
+    <script type="module" src="../js/userprofile.js"></script>
   </body>
 </html>
