User Settings Added

--- a/html/admin.html
+++ b/html/admin.html
@@ -174,7 +174,7 @@
               <!--E-mail-->
               <input
                 id="email"
-                type="text"
+                type="email"
                 autofocus
                 placeholder="E-mail Address"
                 required
@@ -281,7 +281,7 @@
             <!--E-mail-->
             <input
               id="modifyEmail"
-              type="text"
+              type="email"
               autofocus
               placeholder="E-mail Address"
             />
