--- a/html/register.html
+++ b/html/register.html
@@ -98,7 +98,7 @@
         <div class="form_input-group">
           <input
             id="email"
-            type="text"
+            type="email"
             class="form_input"
             autofocus
             placeholder="E-mail Address"
