--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -90,9 +90,12 @@
           </div>
 
           <div class="form-group p-1">
-            <label for="">Custom Profile Picture</label>
+            <label for="avatarInput">Custom URL Profile Picture </label>
+            <label for="avatarInput" style="font-size: 12px"
+              >( to use default image type: "Default")</label
+            >
             <input
-              type="url"
+              type="text"
               class="form-control"
               id="avatarInput"
               placeholder="Image URL"
