custom avatar update

--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -91,11 +91,9 @@
 
           <div class="form-group p-1">
             <label for="avatarInput">Custom URL Profile Picture </label>
-            <label for="avatarInput" style="font-size: 12px"
-              >( to use default image type: "Default")</label
-            >
+
             <input
-              type="text"
+              type="url"
               class="form-control"
               id="avatarInput"
               placeholder="Image URL"
