user settings and admin connection improvements

--- a/html/admin.html
+++ b/html/admin.html
@@ -22,11 +22,16 @@
     <div
       class="container d-fex align-items-center justify-content-center col-lg-sm-xs-8"
     >
-      <h1 class="p-5 text-center">Admin Settings</h1>
+      <!-- Go Back to Profile Settings Button -->
+      <button type="button" class="btn text-light" id="backToSettingsBtn">
+        Back
+      </button>
+
+      <h1 class="p-2 text-center">Admin Settings</h1>
 
       <table class="table text-center">
         <tr>
-          <th class="p-3 h2">Manage Courses</th>
+          <th class="p-5 h2">Manage Courses</th>
         </tr>
         <tr>
           <td>
@@ -63,7 +68,7 @@
         </tr>
 
         <tr>
-          <th class="p-3 h2">Manage Users</th>
+          <th class="p-5 h2">Manage Users</th>
         </tr>
         <tr>
           <td>
