--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -104,13 +104,8 @@
           <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
-              <div class="d-grid p-2">
+              <div class="d-grid p-2" id="btnsSection">
                 <p class="text-success h6 text-center" id="successMsg"></p>
-
-                <button type="submit" class="btn text-white">Apply</button>
-                <button type="button" class="btn text-white" id="backBtn">
-                  Back
-                </button>
               </div>
             </div>
             <div class="col-3"></div>
