fixed bug in admin menu that would duplicate users

--- a/html/admin.html
+++ b/html/admin.html
@@ -238,7 +238,9 @@
             <br />
             <p class="text-center">
               <label for="UserList">Users:</label>
-              <select id="selectUser"></select>
+              <select id="selectUser">
+                <option selected disabled>Users</option>
+              </select>
             </p>
             <p class="text-center h4" id="statusInfo">Status: unknown</p>
 
