removed dummy hardcode from user profile

--- a/html/userprofile.html
+++ b/html/userprofile.html
@@ -24,13 +24,9 @@
       <div class="profile-box">
         <img src="../imgs/userprofile_imgs/menu.png" class="menu-icon" />
         <img src="../imgs/userprofile_imgs/arrow.png" class="back-icon" />
-        <img
-          src="../imgs/userprofile_imgs/profile-pic.png"
-          class="profile-pic"
-          id="profile-pic"
-        />
-        <h3>Lucas Silva</h3>
-        <p>Junior Web developer</p>
+        <img class="profile-pic" id="profile-pic" />
+        <h3>UserName</h3>
+        <p>Description</p>
 
         <br />
         <br />
