--- a/html/admin.html
+++ b/html/admin.html
@@ -174,6 +174,7 @@
                 <option value="Viana_do_Castelo">Viana do Castelo</option>
                 <option value="Vila_Real">Vila Real</option>
                 <option value="Viseu">Viseu</option>
+                <option value="Other">Other</option>
               </select>
 
               <!--E-mail-->
