--- a/html/userSettings.html
+++ b/html/userSettings.html
@@ -85,7 +85,7 @@
               <option value="Viana_do_Castelo">Viana do Castelo</option>
               <option value="Vila_Real">Vila Real</option>
               <option value="Viseu">Viseu</option>
-              <option value="Viseu">Other</option>
+              <option value="Other">Other</option>
             </select>
           </div>
 
