--- a/html/coursepage.html
+++ b/html/coursepage.html
@@ -1,91 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/coursepage.css" />
 
     <title>Courses - Skillify</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1 align="center" class="course_title">Course Title</h1>
+      <h1 class="text-center">Course Title</h1>
 
-        <br />
+      <br />
 
-        <div class="row">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-10">
-                <p align="center" id="videoLocation"></p>
-            </div>
-            <div class="col-sm-1"></div>
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+          <p align="center" id="videoLocation"></p>
         </div>
+        <div class="col-sm-1"></div>
+      </div>
 
-        <br />
+      <br />
 
-        <h4 align="center" class="course_description">Description</h4>
+      <h4 class="text-center">Description</h4>
     </div>
 
     <div class="like-content">
-
-        <button class="btn-secondary like-review">
-            <i class="like-button" aria-hidden="true"></i> Like
-        </button>
-
+      <button class="btn-secondary like-review">
+        <i class="like-button" aria-hidden="true"></i> Like
+      </button>
     </div>
 
+    <!-- COMMENTS SECTION -->
+    <div class="container p-5">
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-10">
+          <div class="row d-flex justify-content-center">
+            <div class="col-md-8">
+              <div
+                class="headings d-flex justify-content-between align-items-center mb-3"
+              >
+                <h5>Course Comments</h5>
+              </div>
 
-    <section id="comment-box">
-        <div class="comment-container">
-            <div class="row">
-                <div class="col-6">
-                    <div class="comment">
-                        <p v-for="items in item" v-text="items"></p>
-                    </div>
-                    <!--End Comment-->
-                </div>
-                <!--End col -->
-            </div><!-- End row -->
-            <div class="row">
-                <div class="col-6">
-                    <textarea type="text" class="input" placeholder="Write a comment" v-model="newItem"
-                        @keyup.enter="addItem()"></textarea>
-                    <button v-on:click="addItem()" class='primaryContained float-right' type="submit">Add
-                        Comment</button>
-                </div><!-- End col -->
+              <section id="commentSection" class="text-center"></section>
             </div>
-            <!--End Row -->
+          </div>
         </div>
-        <!--End Container -->
-    </section><!-- end App -->
-
+        <div class="col-sm-1"></div>
+      </div>
+    </div>
 
     <!-- BOOTSTRAP JS SCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Vue JS -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js'></script>
-    <!-- jQuery -->
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js"></script>
 
     <script type="module" src="../js/coursepage.js"></script>
-</body>
-
+  </body>
 </html>
