--- a/html/coursepage.html
+++ b/html/coursepage.html
@@ -35,13 +35,7 @@
 
       <br />
 
-      <h4 class="text-center">Description</h4>
-    </div>
-
-    <div class="like-content">
-      <button class="btn-secondary like-review">
-        <i class="like-button" aria-hidden="true"></i> Like
-      </button>
+      <h4 class="text-center p-4">Description</h4>
     </div>
 
     <!-- COMMENTS SECTION -->
@@ -54,7 +48,7 @@
               <div
                 class="headings d-flex justify-content-between align-items-center mb-3"
               >
-                <h5>Course Comments</h5>
+                <h3>Course Comments</h3>
               </div>
 
               <section id="commentSection" class="text-center"></section>
