--- a/html/coursepage.html
+++ b/html/coursepage.html
@@ -21,14 +21,12 @@
 
   <body>
     <div class="container">
-      <h1 class="text-center">Course Title</h1>
-
-      <br />
+      <h1 class="text-center p-3">Course Title</h1>
 
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-10">
-          <p align="center" id="videoLocation"></p>
+          <p id="videoLocation"></p>
         </div>
         <div class="col-sm-1"></div>
       </div>
