added like and start course

--- a/html/coursepage.html
+++ b/html/coursepage.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- Add icon library -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../styles/coursepage.css" />
 
@@ -34,7 +40,26 @@
       <br />
 
       <h4 class="text-center p-4">Description</h4>
-      <p><br /></p>
+    </div>
+
+    <div class="p-0">
+      <br /><br /><br /><br /><br />
+      <!-- Like button -->
+      <div class="like">
+        <button class="like-button">
+          <span class="text">Like</span>
+          <i class="fa fa-thumbs-up icon"></i>
+        </button>
+      </div>
+
+      <!-- Start course Button -->
+      <div class="start">
+        <button class="start-button">
+          <span class="text">Start Course</span>
+          <i class="fa fa-arrow-right icon"></i>
+        </button>
+      </div>
+      <br />
     </div>
 
     <!-- COMMENTS SECTION -->
