added event to start course

--- a/html/coursepage.html
+++ b/html/coursepage.html
@@ -46,7 +46,7 @@
       <br /><br /><br /><br /><br />
       <!-- Like button -->
       <div class="like">
-        <button class="like-button">
+        <button class="like-button" id="likeCourseBtn">
           <span class="text">Like</span>
           <i class="fa fa-thumbs-up icon"></i>
         </button>
@@ -54,7 +54,7 @@
 
       <!-- Start course Button -->
       <div class="start">
-        <button class="start-button">
+        <button class="start-button" id="startCourseBtn">
           <span class="text">Start Course</span>
           <i class="fa fa-arrow-right icon"></i>
         </button>
