--- a/html/catalog.html
+++ b/html/catalog.html
@@ -2,311 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Skillify - Catalog</title>
+
+    <!-- BOOTSTRAP STYLE -->
     <link
       rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+      integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+
+    <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="../styles/catalog.css" />
-    <title>Skillify</title>
   </head>
   <body>
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col">
-          <h1 class="" id="title">Skillify</h1>
+      <h1 class="text-center p-3">Courses Catalog</h1>
+      <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8 text-center">
+          <!-- Section used to inject the courses -->
+          <section id="coursesSection"></section>
         </div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col"></div>
-        <div class="col">
-          <span class="dot"
-            ><img
-              class="img-responsive"
-              src="../imgs/catalog_img/menu.png"
-              id="menu"
-              alt="menu"
-          /></span>
-        </div>
+        <div class="col-sm-2"></div>
       </div>
     </div>
 
-    <section>
-      <div class="swiper mySwiper container">
-        <div class="swiper-wrapper content">
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src=""" alt="">-->
-              </div>
+    <!-- SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+      integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+      crossorigin="anonymous"
+    ></script>
 
-              <div class="name-course">
-                <span class="name">Communication</span>
-                <br />
-                <!--<span class="description">Express yourself better!</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Leadership</span>
-                <br />
-                <!--<span class="description">Become a Leader!</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Creativity</span>
-                <br />
-                <!--<span class="description">Create and innovate</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Decision Making</span>
-                <!--<span class="description">Make better decisions</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Time Management</span>
-                <!--<span class="description">Having trouble managing Time?</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Adaptability</span>
-                <br />
-                <!--<span class="description">Adapt like a chameleon</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Emotional Intelligence</span>
-                <!--<span class="description">Master your emotions</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Persuasion</span>
-                <br />
-                <!--<span class="description">Learn to change people's mind</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Problem Solving</span>
-                <!--<span class="description">Find the best solution for a problem</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-          <div class="swiper-slide card">
-            <div class="card-content">
-              <div class="image">
-                <!--<img src="" alt="">-->
-              </div>
-
-              <div class="name-course">
-                <span class="name">Collaboration</span>
-                <br />
-                <!--<span class="description">Team work, makes the dream work</span>-->
-              </div>
-
-              <div class="rating">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
-                <i class="far fa-star"></i>
-              </div>
-
-              <div class="button">
-                <button class="enter">Enter</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div>
-    </section>
-
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script src="../js/catalog.js"></script>
+    <script type="module" src="../js/catalog.js"></script>
   </body>
 </html>
