added btn to userProfile that leads to the catalog

--- a/html/userprofile.html
+++ b/html/userprofile.html
@@ -28,6 +28,12 @@
           class="menu-icon"
           id="logOutBtn"
         />
+        <img
+          src="../imgs/userprofile_imgs/arrow.png"
+          class="back-icon"
+          id="openCatalogBtn"
+          title="Go to Catalog"
+        />
         <img class="profile-pic" id="profile-pic" />
         <h3>UserName</h3>
         <p>Description</p>
