--- a/html/index.html
+++ b/html/index.html
@@ -13,47 +13,21 @@
 <div class="container">
         <div class="row align-items-center">
                 <div class="col">
-                    <h1 class="" id="title">Skillify</h1>
+                    <a href="../html/index.html"><h1 class="" id="title">Skillify</h1></a>
                 </div>
                 <div class="col">
                 </div>
-                <div class="col">
-                </div>
-                <div class="col">
-                </div>
-        <div id="content_menu">
-            <div class="col slide">
-                <span class="dot">
-                    <a href="#" onclick="openSlideMenu()">
-                        <img class="img-responsive" src="../imgs/main/menu.png" id="menu" alt="menu">
-                    </a>
-                </span>
-            </div>
-            <!--
-            <div id="nav_menu" class="nav">
-                <a href="#" class="close" onclick="closeSlideMenu()">
-                    <span class="material-symbols-outlined">close</span>
-                </a>
-                <br>
-                <a href="#">Intro</a>
-                <br>
-                <a href="#">Who</a>
-                <br>
-                <a href="#">About</a>
-                <br>
-                <a href="#">Our Methods</a>
-                <br>
-                <a href="#">Courses</a>
-
-                <br>
-                <br>
-
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Linkedin </a>
-            </div>
-            -->
-        </div>
+                
+                <!--
+                        <a href="#title" target="_self">Intro</a>
+                        <a href="#who_title" target="_self">Who</a>
+                        <a href="#about_title" target="_self">About</a>
+                        <a href="#methods_title" target="_self">Our Methods</a>
+                        <a href="../html/">Courses</a>
+                        <a href="https://www.facebook.com/">Facebook</a>
+                        <a href="https://www.instagram.com/">Instagram</a>
+                        <a href="https://www.linkedin.com/">Linkedin </a>
+                    -->
         </div>
 </div>
     
@@ -64,23 +38,15 @@
     <div class="row">
         <div class="col">
             <div class="col">
-                <img class="img-responsive" id="logo_intro" src="../imgs/main/Logo_final.png" alt="Skillify">
+                <img class="img-responsive" id="logo_intro" src="../imgs/Logo_final.png" alt="Skillify">
             </div>
         </div>
     </div>
 </div>   
+
 <br>
-<!--
-    <div class="row">
-        <br>
-        <div class="col">
-        </div>
-        <div class="col">
-            <h1 class="" id="title_2">Boost your <wbr> Skills with <wbr> Skillify</h1>
-        </div>
-    </div>
--->
 <br>
+
 <h1 class="title">
     <span class="title-content">Boost your</span>
     <span class="title-content title-second">Skills with</span>
@@ -89,10 +55,10 @@
 
 <div class="row">
     <div class="col">
-        <a href="../profile/login_system.html"><h4 class="btn registNow">Register</h4></a>
+        <a href="../html/register.html"><h4 class="btn registNow">Register</h4></a>
     </div>
     <div class="col">
-        <a href="../profile/login_system.html"></a><h4 class="btn logIn">Log In</h4></a>
+        <a href="../html/logIn.html"></a><h4 class="btn logIn">Log In</h4></a>
     </div>
 </div>
 
@@ -111,11 +77,15 @@
 <div class="row">
     <div class="col">
         <!--Acesso aos cursos-->
-        <span id="dot_cursos"><img class="img-responsive" src="../imgs/main/magistrate.png" id="perfil" alt="profile"></span>
+        <span id="dot_cursos">
+            <a href="../html/coursepage.html"><img class="img-responsive" src="../imgs/magistrate.png" id="perfil" alt="profile"></a>
+        </span>
     </div>
     <div class="col">
     <!--Acesso ao Perfil-->
-    <span id="dot_perfil"><img class="img-responsive" src="../imgs/main/user.png" id="perfil" alt="profile"></span>
+    <span id="dot_perfil">
+        <a href="../html/userprofile.html"><img class="img-responsive" src="../imgs/user.png" id="perfil" alt="profile"></a>
+    </span>
     </div>
 </div>
 
@@ -132,7 +102,7 @@
 <h1 class="" id="who_title">Who</h1>
 
 <br>
-<p>random text</p>
+<p>Get the know the people behind the curtain. Our team.</p>
 
 <br>
 <br>
@@ -141,7 +111,7 @@
 <article class="card_lucas">
     <div class="card_content">
         <h5 class="card_title">Lucas Silva, Júnior Developer</h5>
-        <p class="card_description">An perfectly synchronized random text</p>
+        <p class="card_description">Music Lover, Car Enthusiast</p>
     </div>
 </article>
 </div>
@@ -154,7 +124,7 @@
     <div class="card_content">
         <h5 class="card_title">Nuno Mendonça</h5>
         <h3 class="card_subtitle">Junior Developer</h3>
-        <p class="card_description">An perfectly synchronized random text</p>
+        <p class="card_description">Design and Engineering Enthusiast</p>
     </div>
 </article>
 </div>
@@ -166,7 +136,7 @@
 <article class="card">
     <div class="card_content">
         <h5 class="card_title">Tiago Ribeiro, Júnior Developer</h5>
-        <p class="card_description">An perfectly synchronized random text</p>
+        <p class="card_description">Pro Gamer, Code Enthusiast</p>
     </div>
 </article>
 </div>
@@ -174,7 +144,9 @@
 <br>
 <br>
 
+<a href="#about_title" target="_self">
 <h4 class="" id="about_target">Find out More ABOUT <br> Skillify</h4>
+</a>
 
 <br>
 </div>
@@ -183,11 +155,10 @@
 <h1 class="" id="about_title">About</h1>
 
 <br>
-
-<p>random text</p>
-
 <br>
-<br>
+
+<p>Skillify is a platform that connects and brings people together through Soft Skills, formed by three junior programmers, each with a different aspect but all with an unstoppable passion for what they do, this is us, get to know us. </p>
+
 <br>
 
 <h4 id="important">What Makes Soft <br> Skills Important</h4>
@@ -195,7 +166,7 @@
 <br>
 <br>
 
-<p>Random text</p>
+<p>Soft Skills are so important as Hard Skills, is said that with Hard Skills, get you and interview, but Soft Skills help you to keep the job.</p>
 
 <br>
 <br>
@@ -203,39 +174,49 @@
 
 <h2 id="missing">The Missing Piece</h2>
 
-<!--Falta colocar a peça-->
 <br>
 <br>
 
+<img src="../imgs/piece.png" alt="piece" id="piece">
+<br>
+<br>
+
+<a href="#methods_target" target="_self">
 <h4 class="" id="methods_target">See our METHODS For Yourself</h4>
+</a>
 
 <br>
 <br>
 </div>
 
+<!--Methods-->
 <div id="methods_color">
 <h1 class="" id="methods_title">Methods</h1>
 <br>
-
+<br>
 <!--Video-->
 
+<video width="350" height="200" src="../videos/SkillifyPromoFinal.mp4" controls id="video">
+</video>
 
-<br>
+
 <br>
 <br>
 
 <h5 id="videos_title">Videos</h5>
-<p>text</p>
+<p>By viewing a set of videos corresponding to each Soft Skills theme, the learner will be able to master numerous relationship arts.</p>
 
 <br>
 <br>
 
 <h5 id="practice_title">Practice</h5>
-<p>text</p>
+<p>By practicing the specially prepared exercises, you are guaranteed to become an expert in your chosen field; learning has never been so easy.</p>
 
 <br>
 
+<a href="#courses_title" target="_self">
 <h4 id="learn">Learn More</h4>
+</a>
 
 <br>
 <br>
@@ -246,7 +227,7 @@
 <h1 class="" id="courses_title">Courses</h1>
 <br>
 
-<p>random text</p>
+<p>enjoy our variety of carefully selected courses, with Skillify you can evolve as a person and as a professional</p>
 
 <br>
 
@@ -296,9 +277,9 @@
 <br>
 <br>
 
-<h4 class="" id="courses_target">Take me there</h4>
+<a href="../html/catalog.html"><h4 class="" id="courses_target">Take me there</h4></a>
 
-<span id="dot_up"><img src="../imgs/main/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
+<span id="dot_up"><img src="../imgs/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
 
 </div>
 </div>
