--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col">
                 </div>
-                
+
                 <!--
                         <a href="#title" target="_self">Intro</a>
                         <a href="#who_title" target="_self">Who</a>
@@ -38,7 +38,7 @@
     <div class="row">
         <div class="col">
             <div class="col">
-                <img class="img-responsive" id="logo_intro" src="../imgs/Logo_final.png" alt="Skillify">
+                <img class="img-responsive" id="logo_intro" src="../imgs/main/Logo_final.png" alt="Skillify">
             </div>
         </div>
     </div>
@@ -58,7 +58,7 @@
         <a href="../html/register.html"><h4 class="btn registNow">Register</h4></a>
     </div>
     <div class="col">
-        <a href="../html/logIn.html"></a><h4 class="btn logIn">Log In</h4></a>
+        <a href="../html/logIn.html"><h4 class="btn logIn">Log In</h4></a>
     </div>
 </div>
 
@@ -78,7 +78,7 @@
     <div class="col">
         <!--Acesso aos cursos-->
         <span id="dot_cursos">
-            <a href="../html/coursepage.html"><img class="img-responsive" src="../imgs/magistrate.png" id="perfil" alt="profile"></a>
+            <a href="../html/catalog.html"><img class="img-responsive" src="../imgs/magistrate.png" id="perfil" alt="profile"></a>
         </span>
     </div>
     <div class="col">
@@ -133,7 +133,7 @@
 <br>
 
 <div class="container d-flex justify-content-center">
-<article class="card">
+<article class="card_tiago">
     <div class="card_content">
         <h5 class="card_title">Tiago Ribeiro, Júnior Developer</h5>
         <p class="card_description">Pro Gamer, Code Enthusiast</p>
@@ -180,6 +180,7 @@
 <img src="../imgs/piece.png" alt="piece" id="piece">
 <br>
 <br>
+<br>
 
 <a href="#methods_target" target="_self">
 <h4 class="" id="methods_target">See our METHODS For Yourself</h4>
@@ -204,12 +205,19 @@
 <br>
 
 <h5 id="videos_title">Videos</h5>
+<br>
+<br>
+
 <p>By viewing a set of videos corresponding to each Soft Skills theme, the learner will be able to master numerous relationship arts.</p>
 
 <br>
 <br>
 
 <h5 id="practice_title">Practice</h5>
+
+<br>
+<br>
+
 <p>By practicing the specially prepared exercises, you are guaranteed to become an expert in your chosen field; learning has never been so easy.</p>
 
 <br>
@@ -231,48 +239,114 @@
 
 <br>
 
-<h2>Communication</h2>
-<p>communication</p>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Communication</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
 
 <br>
-
-<h2>Leadership</h2>
-<p>leadership</p>
-
-<br>    
-
-<h2>Creativity</h2>
-<p>creativity</p>
-
 <br>
 
-<h2>Decision Making</h2>
-<p>decision making</p>
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Leadership</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
 
 <br>
-
-<h2>Time Management</h2>
-<p>time management</p>
-
 <br>
 
-<h2>Adaptability</h2>
-<p>adaptability</p>
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Creativity</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
 
 <br>
-
-<h2>Persuasion</h2>
-<p>persuasion</p>
-
 <br>
 
-<h2>Problem Solving</h2>
-<p>problem solving</p>
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Decision Making</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
 
 <br>
+<br>
 
-<h2>Collaboration</h2>
-<p>collaboration</p>
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Time Management</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Adaptability</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Persuasion</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Problem Solving</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Collaboration</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
+
+<br>
+<br>
+
+<article class="card_course">
+    <div class="card_content_course">
+      <h3 class="card_title_course">Emotional <br><br><br>
+         Intelligence</h3>
+      <p class="card_description_course">
+      </p>
+    </div>
+</article>
 
 <br>
 <br>
@@ -281,7 +355,6 @@
 
 <span id="dot_up"><img src="../imgs/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
 
-</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
