--- a/html/index.html
+++ b/html/index.html
@@ -17,17 +17,10 @@
                 </div>
                 <div class="col">
                 </div>
-
-                <!--
-                        <a href="#title" target="_self">Intro</a>
-                        <a href="#who_title" target="_self">Who</a>
-                        <a href="#about_title" target="_self">About</a>
-                        <a href="#methods_title" target="_self">Our Methods</a>
-                        <a href="../html/">Courses</a>
-                        <a href="https://www.facebook.com/">Facebook</a>
-                        <a href="https://www.instagram.com/">Instagram</a>
-                        <a href="https://www.linkedin.com/">Linkedin </a>
-                    -->
+            <span class="dot">    
+                <a href="../html/access.html"><img class="img-responsive" id="menu" src="../imgs/menu.png" alt="menu"></a>
+            </span>
+            </a>
         </div>
 </div>
     
