--- a/html/access.html
+++ b/html/access.html
@@ -19,7 +19,7 @@
                 <div class="col">
                 </div>
             <span class="dot">    
-                <a href="../html/access.html"><img class="img-responsive" id="close" src="../imgs/main/close.png" alt="menu"></a>
+                <a href="../html/index.html"><img class="img-responsive" id="close" src="../imgs/main/close.png" alt="menu"></a>
             </span>
             </a>
         </div>
