--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
                 <div class="col">
                 </div>
             <span class="dot">    
-                <a href="../html/access.html"><img class="img-responsive" id="menu" src="../imgs/menu.png" alt="menu"></a>
+                <a href="../html/access.html"><img class="img-responsive" id="menu" src="../imgs/main/menu.png" alt="menu"></a>
             </span>
             </a>
         </div>
@@ -170,7 +170,7 @@
 <br>
 <br>
 
-<img src="../imgs/piece.png" alt="piece" id="piece">
+<img src="../imgs/main/piece.png" alt="piece" id="piece">
 <br>
 <br>
 <br>
@@ -346,7 +346,7 @@
 
 <a href="../html/catalog.html"><h4 class="" id="courses_target">Take me there</h4></a>
 
-<span id="dot_up"><img src="../imgs/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
+<span id="dot_up"><img src="../imgs/main/up.png" class="img-responsive" id="go_up" alt="GoUp"></span>
 
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
